--- a/configs/water_tank.yaml
+++ b/configs/water_tank.yaml
@@ -1,22 +1,19 @@
 # sims args
-sim: armax
+sim: water_tank
 T: -1
-dt: 0.02
-T_updates: 20 #  20/0.02 = 1000 points =, sps taking max 18 (start), min 8 seconds
+dt: 0.01
+T_updates: 15 #  10/0.02 = 500 points =, sps taking max 18 (start), min 8 seconds
 plot_system: true
 history_limit: 5.0 # seconds
 dB: sim_data.db
 apply_disturbance: true
 disturbance: 50
 controller: lqr
-L: [[-1.0]] # 2.7 x optimal F
-reference: [square]
-r_a: [1.0] # when using constant reference
-r_f: [0.2]
-r_c: [0.0]
-A: [1.0, -0.7]
-B: [0.0, -0.4]
-C: [1.0]
+L: [[0.1]] # 2.7 x optimal F
+reference: [sin]
+r_a: [0.55] # when using constant reference
+r_f: [0.07]
+r_c: [1.0]
 # sps args
 n_A: 1
 n_B: 1
@@ -34,6 +31,6 @@ debug: true
 epsilon: 1e-10
 Lambda: [[1, 0], [0, 1]]
 search: radial # grid or radial
-bounds: [[-1.0,-0.4], [-0.8, 0.0]]
+bounds: [[-1.25,-0.75], [-0.25, 0.25]]
 forget: 0.01
-random_centers: 100
+random_centers: 200
