--- a/configs/water_tank.yaml
+++ b/configs/water_tank.yaml
@@ -1,7 +1,7 @@
 # sims args
 sim: water_tank
 T: -1
-dt: 0.01
+dt: 0.02
 T_updates: 15 #  10/0.02 = 500 points =, sps taking max 18 (start), min 8 seconds
 plot_system: true
 history_limit: 5.0 # seconds
@@ -9,12 +9,12 @@ dB: sim_data.db
 apply_disturbance: true
 disturbance: 50
 controller: lqr
-L: [[0.8]] # 2.7 x optimal F
-Q: [[0.9]] # 2.7 x optimal F
-R: [[0.2]]
+L: [[5.652]] # 2.7 x optimal F
+Q: [[1.0]] # 2.7 x optimal F
+R: [[0.1]]
 reference: [square]
 r_a: [0.55] # when using constant reference
-r_f: [0.04]
+r_f: [0.1]
 r_c: [1.0]
 # sps args
 n_A: 1
@@ -33,8 +33,8 @@ debug: true
 epsilon: 1e-10
 Lambda: [[1, 0], [0, 1]]
 search: radial # grid or radial
-bounds: [[-1.2,-0.8], [-0.2, 0.2]]
+bounds: [[-1.1,0.0], [-0.4, 0.4]]
 forget: 0.0
-random_centers: 100
-steepness: 300
+random_centers: 200
+steepness: 100
 K: 10    # number of most probable points to use for L estimation
