--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -153,6 +153,148 @@
                 "--K",
                 "10"
             ]
+        },
+        {
+            "name": "Run Sim Water Tank",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "sims.sims",
+            "args": [
+                "--sim",
+                "water_tank",
+                "--T",
+                "-1",
+                "--T_updates",
+                "15",
+                "--dt",
+                "0.02",
+                "--plot_system",
+                "--history_limit",
+                "5.0",
+                "--dB",
+                "sim_data.db",
+                "--apply_disturbance",
+                "--disturbance",
+                "50",
+                "--controller",
+                "lqr",
+                "--L",
+                "[[5.652]]",
+                "--Q",
+                "[[1.0]]",
+                "--R",
+                "[[0.1]]",
+                "--reference",
+                "['square']",
+                "--r_a",
+                "[0.55]",
+                "--r_f",
+                "[0.1]",
+                "--r_c",
+                "[1]",
+                "--N",
+                "200",
+            ]
+        },
+        {
+            "name": "Run Sim Armax 1",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "sims.sims",
+            "args": [
+                "--sim",
+                "armax",
+                "--T",
+                "-1",
+                "--T_updates",
+                "20",
+                "--dt",
+                "0.02",
+                "--plot_system",
+                "",
+                "--history_limit",
+                "5.0",
+                "--dB",
+                "sim_data.db",
+                "--apply_disturbance",
+                "",
+                "--disturbance",
+                "50",
+                "--controller",
+                "lqr",
+                "--L",
+                "[[-1]]",
+                "--Q",
+                "[[0.4]]",
+                "--R",
+                "[[1.0]]",
+                "--reference",
+                "['square']",
+                "--r_a",
+                "[1]",
+                "--r_f",
+                "[0.2]",
+                "--r_c",
+                "[0]",
+                "--N",
+                "200",
+                "--A",
+                "[1,-0.7]",
+                "--B",
+                "[0,-0.4]",
+                "--C",
+                "[1]"
+            ]
+        },
+        {
+            "name": "Run Sim Armax 2",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "sims.sims",
+            "args": [
+                "--sim",
+                "armax",
+                "--T",
+                "-1",
+                "--T_updates",
+                "20",
+                "--dt",
+                "0.02",
+                "--plot_system",
+                "",
+                "--history_limit",
+                "5.0",
+                "--dB",
+                "sim_data.db",
+                "--apply_disturbance",
+                "",
+                "--disturbance",
+                "50",
+                "--controller",
+                "lqr",
+                "--L",
+                "[[-1.2]]",
+                "--Q",
+                "[[0.9, 0.0], [0.0, 0.9]] # state x state",
+                "--R",
+                "[[0.5]] # input x input",
+                "--reference",
+                "['square']",
+                "--r_a",
+                "[1]",
+                "--r_f",
+                "[0.4]",
+                "--r_c",
+                "[0]",
+                "--N",
+                "200",
+                "--A",
+                "[1,-0.7,-0.1]",
+                "--B",
+                "[0,-0.4,-0.2]",
+                "--C",
+                "[1]"
+            ]
         }
     ]
 }
